[metadata]
name = xpyth_31_parser
version = 0.0.6
author = Erwin Kaats
author_email = egit@tuta.io
description = An XPath 3.1 Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ekaats/xpyth_parser
project_urls =
    Bug Tracker = https://github.com/ekaats/xpyth_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: LGPL-3.0-only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src