[metadata]
name = xpyth_31_parser
version = 0.0.7
author = Erwin Kaats
author_email = egit@tuta.io
description = An XPath 3.1 Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ekaats/xpyth_parser
project_urls =
    Bug Tracker = https://github.com/ekaats/xpyth_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyparsing
    isodate

[options.packages.find]
where = src